--- a/src/app/wrapper/wrapper.component.html
+++ b/src/app/wrapper/wrapper.component.html
@@ -1,6 +1,12 @@
-<mat-sidenav>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="push" position="end" [opened]="true">
+    <nav class="app-sidebar">
 
-</mat-sidenav>
-<div class="content">
+    </nav>
+  </mat-sidenav>
+  <div class="app-content">
 
-</div>
+  </div>
+</mat-sidenav-container>
+
+
