--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,2 @@
-<div class="app-search" [hidden]="!showSearch"></div>
-<div class="app-navbar" [hidden]="showSearch"></div>
+<div class="app-search" [hidden]="!showSearch" (hiddenSearch)="showSearch=false"></div>
+<div class="app-navbar" [hidden]="showSearch" (displaySearch)="showSearch=true"></div>
