chore: initial commit from @angular/cli
Signed-off-by: Nghia Nguyen <zinzinday@gmail.com>

--- a/src/app/wrapper/wrapper.component.html
+++ b/src/app/wrapper/wrapper.component.html
@@ -1,12 +1,10 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidenav mode="push" position="end" [opened]="true">
+  <mat-sidenav #sidenav mode="push" [opened]="true">
     <nav class="app-sidebar">
 
     </nav>
   </mat-sidenav>
-  <div class="app-content">
-
-  </div>
+  <div class="app-content" fxLayout="column"></div>
 </mat-sidenav-container>
 
 
