--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="mat-elevation-z6">
-  <button mat-icon-button (click)="sidenav.open()">
+  <button mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
   <span class="toolbar-heading">{{ comtitle }}</span>
