--- a/src/app/wrapper/content/content.component.html
+++ b/src/app/wrapper/content/content.component.html
@@ -1,3 +1,3 @@
-<p>
-  content works!
-</p>
+<div class="app-content-header"></div>
+<div class="app-content-main" fxFlex="1"></div>
+<div class="app-content-footer"></div>
