--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,12 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   @include angular-material-theme($candy-app-theme);
 }
 
-body {
+html, body {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background-color: #f9f9f9;
   border: 0;
   padding: 0;
@@ -39,6 +44,7 @@ body {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
 }
+
 
 .full-width {
   width: 100%;
